@@ -1,130 +1,94 @@
 package org.utn.ba.tptacsg2.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.context.annotation.Import;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.http.converter.StringHttpMessageConverter;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.test.web.servlet.MockMvc;
-import org.utn.ba.tptacsg2.config.TestSecurityConfig;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.utn.ba.tptacsg2.dtos.InputRegistroDto;
 import org.utn.ba.tptacsg2.models.users.Rol;
 import org.utn.ba.tptacsg2.models.users.Usuario;
 import org.utn.ba.tptacsg2.services.UsuarioService;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(UsuarioController.class)
-@Import(TestSecurityConfig.class)
+@ExtendWith(MockitoExtension.class)
 class UsuarioControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
-
-    @MockitoBean
-    private UsuarioService usuarioService;
-
-    @Autowired
     private ObjectMapper objectMapper;
 
-    @Test
-    @DisplayName("Debe devolver 201 cuando se registra un usuario correctamente")
-    void registrarUsuario_devuelve201CuandoSeRegistraCorrectamente() throws Exception {
-        // Arrange
-        InputRegistroDto inputRegistroDto = new InputRegistroDto("testuser", "password123", "PARTICIPANTE", "juan", "Perez", "123");
-        doNothing().when(usuarioService).registrar(any(InputRegistroDto.class));
+    @Mock
+    private UsuarioService usuarioService;
 
-        // Act & Assert
+    @BeforeEach
+    void setUp() {
+        objectMapper = JsonMapper.builder().findAndAddModules().build();
+        mockMvc = MockMvcBuilders.standaloneSetup(new UsuarioController(usuarioService))
+                .setMessageConverters(
+                        new StringHttpMessageConverter(),
+                        new MappingJackson2HttpMessageConverter(objectMapper))
+                .build();
+    }
+
+    @Test
+    @DisplayName("POST /user -> 201 cuando se registra correctamente")
+    void registrarUsuario_devuelve201() throws Exception {
+        InputRegistroDto dto = new InputRegistroDto("user", "pass", "ROLE_ADMIN", "Ana", "Perez", "123");
+
         mockMvc.perform(post("/user")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(inputRegistroDto)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isCreated())
                 .andExpect(content().string("Usuario registrado correctamente"));
 
-        verify(usuarioService, times(1)).registrar(any(InputRegistroDto.class));
+        verify(usuarioService).registrar(any(InputRegistroDto.class));
     }
 
     @Test
-    @DisplayName("Debe devolver 400 cuando ocurre una excepción durante el registro")
+    @DisplayName("POST /user -> 400 cuando el servicio lanza excepción")
     void registrarUsuario_devuelve400CuandoOcurreExcepcion() throws Exception {
-        // Arrange
-        InputRegistroDto inputRegistroDto = new InputRegistroDto("testuser", "password123", "PARTICIPANTE", "juan", "Perez", "123");
-        doThrow(new RuntimeException("El usuario ya existe")).when(usuarioService).registrar(any(InputRegistroDto.class));
+        InputRegistroDto dto = new InputRegistroDto("user", "pass", "ROLE_ADMIN", "Ana", "Perez", "123");
+        doThrow(new RuntimeException("fallo")).when(usuarioService).registrar(any(InputRegistroDto.class));
 
-        // Act & Assert
         mockMvc.perform(post("/user")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(inputRegistroDto)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(dto)))
                 .andExpect(status().isBadRequest())
-                .andExpect(content().string("Error del servidor: El usuario ya existe"));
-
-        verify(usuarioService, times(1)).registrar(any(InputRegistroDto.class));
+                .andExpect(content().string("Error del servidor: fallo"));
     }
 
     @Test
-    @DisplayName("Debe devolver 200 OK con lista de usuarios cuando el usuario es ADMIN")
-    @WithMockUser(roles = "ADMIN")
-    void getUsuarios_devuelve200YListaDeUsuarios() throws Exception {
-        // Arrange
-        Usuario usuario1 = new Usuario("1", "user1", "pass1", Rol.ROLE_USER);
-        Usuario usuario2 = new Usuario("2", "user2", "pass2", Rol.ROLE_ORGANIZER);
-        
-        when(usuarioService.getUsuarios())
-            .thenReturn(Arrays.asList(usuario1, usuario2));
+    @DisplayName("GET /user -> 200 con lista de usuarios")
+    void getUsuarios_devuelveLista() throws Exception {
+        List<Usuario> usuarios = List.of(
+                new Usuario("1", "user1", "hash1", Rol.ROLE_USER),
+                new Usuario("2", "user2", "hash2", Rol.ROLE_ADMIN)
+        );
+        when(usuarioService.getUsuarios()).thenReturn(usuarios);
 
-        // Act & Assert
         mockMvc.perform(get("/user")
-                .accept(MediaType.APPLICATION_JSON))
+                        .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$[0].username").value("user1"))
+                .andExpect(jsonPath("$[0].id").value("1"))
                 .andExpect(jsonPath("$[1].username").value("user2"));
-
-        verify(usuarioService, times(1)).getUsuarios();
     }
-
-    @Test
-    @DisplayName("Debe devolver 200 OK con lista vacía cuando no hay usuarios")
-    @WithMockUser(roles = "ADMIN")
-    void getUsuarios_devuelve200YListaVacia() throws Exception {
-        // Arrange
-        when(usuarioService.getUsuarios())
-            .thenReturn(Collections.emptyList());
-
-        // Act & Assert
-        mockMvc.perform(get("/user")
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$").isArray())
-                .andExpect(jsonPath("$").isEmpty());
-
-        verify(usuarioService, times(1)).getUsuarios();
-    }
-
-    @Test
-    @DisplayName("Debe devolver 403 Forbidden cuando se accede sin rol ADMIN")
-    @WithMockUser(roles = "USER")
-    void getUsuarios_devuelve403SinRolAdmin() throws Exception {
-        // Act & Assert
-        mockMvc.perform(get("/user")
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isForbidden());
-
-        verify(usuarioService, never()).getUsuarios();
-    }
-
-
 }
